src/app/Home/web/world-peacekeepers-movement/world-peacekeepers-movement.component.css
/* .delegate-form form{
  font-size: 18px;
} */
.delegate-form form .form-control, .delegate-form form .form-select {
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1.1px dotted #131313;
  border-radius: 0 !important;
  background-color: transparent;
  color: var(--color6);
  width: 90%;
}

.badge h6 {
  font-size: 24px;
  font-weight: 700;
  line-height: 40px;
  text-align: center;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-underline-position: from-font;
  text-decoration-skip-ink: auto;
  color: var(--color1);
}

.badge li {
  line-height: 8;
}


/* box */

.drop-zone {
  max-width: 100%;
  height: 200px;
  padding: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-family: "Quicksand", sans-serif;
  /* font-weight: 500;
  font-size: 20px; */
  cursor: pointer;
  color: #0B0B0B;
  border: 1px dashed #8D8D8D;
  border-radius: 10px;
  flex-flow: column wrap;
}

.drop-zone--over {
  border-style: solid;
}

/* .drop-zone__input {
  display: none;
} */

.drop-zone__thumb {
  width: 100%;
  height: 100%;
  border-radius: 10px;
  overflow: hidden;
  background-color: #cccccc;
  background-size: cover;
  position: relative;
}

.drop-zone__thumb::after {
  content: attr(data-label);
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 5px 0;
  color: #ffffff;
  background: rgba(0, 0, 0, 0.75);
  font-size: 14px;
  text-align: center;
}
/* .custom-file-input {
  width: 53%;
  padding: 7px 14px 15px 99px;} */
.custom-file-input::-webkit-file-upload-button {
  visibility: hidden;
}
.custom-file-input::before {
  content: 'Browse files';
  color: #005A93;
  display: inline-block;
  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
  border: 1px solid #005A93;
  border-radius: 3px;
  padding: 5px 8px;
  outline: none;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  text-shadow: 1px 1px #fff;
  font-weight: 700;
  font-size: 10pt;
}
.custom-file-input:hover::before {
  border-color: black;
}
.custom-file-input:active {
  outline: 0;
}
.custom-file-input:active::before {
  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
}

.iti {
  width: 100%;
}
/* .modal-content {
  background-color: transparent;
  background-clip: padding-box;
  border: none;
} */


.bgModal .modal-content{
  background-image: none;
}

.drop-zone-hover {
  border-color: #007bff;
}

